video overlapping issue fixed

--- a/src/pages/Dashboard/Dashboard.module.scss
+++ b/src/pages/Dashboard/Dashboard.module.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Aclonica&family=Anton&family=Autour+One&family=Bowlby+One&family=Caveat+Brush&family=Chicle&family=Spicy+Rice&family=Ubuntu:wght@300&display=swap');
 .dashboard {
   position: relative;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .bgVideo {
